--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: localized_rich_text
-description: A new Flutter package project.
+description: A flutter plugin to facilitate the localization of a RichText
 version: 0.0.1
-homepage:
+homepage: https://github.com/LaTrita97/localized_rich_text
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
