--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: localized_rich_text
 description: A flutter plugin to facilitate the localization of a RichText
-version: 0.0.1
+version: 0.0.2
 homepage: https://github.com/LaTrita97/localized_rich_text
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
@@ -21,6 +21,18 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  plugin:
+    platforms:
+      android:
+        package: com.example.localized_rich_text
+        pluginClass: LocalizedRichTextPlugin
+      ios:
+        pluginClass: LocalizedRichTextPlugin
+      # macos:
+      #   pluginClass: HelloPlugin
+      # web:
+      #   pluginClass: LocalizedRichTextWeb
+      #   fileName: localized_rich_text_web.dart
 
   # To add assets to your package, add an assets section, like this:
   # assets:
