Added WEB support

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
 
   localized_rich_text:
     path: ../
