--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: localized_rich_text
 description: A flutter plugin to facilitate the localization of a RichText
-version: 0.0.4
+version: 0.0.5
 homepage: https://github.com/LaTrita97/localized_rich_text
 
 environment:
@@ -9,6 +9,8 @@ environment:
 
 dependencies:
   flutter:
+    sdk: flutter
+  flutter_web_plugins:
     sdk: flutter
 
 dev_dependencies:
@@ -30,6 +32,6 @@ flutter:
         pluginClass: LocalizedRichTextPlugin
       # macos:
       #   pluginClass: HelloPlugin
-      # web:
-      #   pluginClass: LocalizedRichTextWeb
-      #   fileName: localized_rich_text_web.dart
+      web:
+        pluginClass: LocalizedRichTextWeb
+        fileName: localized_rich_text_web.dart
